# src/domain/User/dto/create-user.dto.ts
@@ -1,15 +1,12 @@
-import { IsEmail, IsNotEmpty, IsNumber, IsString } from 'class-validator';
+import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
+import { VALIDATION_MESSAGE } from '../../../common/validation/validation';
 
 export class CreateUserDto {
-	@IsString()
-	@IsNotEmpty()
-	name: string;
+	@IsString({ message: VALIDATION_MESSAGE.string('username') })
+	@IsNotEmpty({ message: VALIDATION_MESSAGE.notEmpty('username') })
+	username: string;
 
-	@IsNumber()
-	@IsNotEmpty()
-	email: string;
-
-	@IsString()
-	@IsNotEmpty()
+	@IsString({ message: VALIDATION_MESSAGE.string('password') })
+	@IsNotEmpty({ message: VALIDATION_MESSAGE.notEmpty('password') })
 	password: string;
 }
