# src/domain/User/user.repository.ts
@@ -1,5 +1,20 @@
-import { Repository } from 'typeorm';
+import AppDataSource from '../../config/appDataSource';
+import { CreateUserDto } from './dto/create-user.dto';
+import { UpdateUserDto } from './dto/update-user.dto';
 import { User } from './user.entity';
-import { AppDataSource } from '../../config/orm';
 
-export const UserRepository: Repository<User> = AppDataSource.getRepository(User);
+export const UserRepository = AppDataSource.getRepository(User).extend({
+	async findByUsername(username: User['username']) {
+		return await this.findOneBy({ username });
+	},
+
+	async createUser(createUserDto: CreateUserDto) {
+		const createdUser = this.create(createUserDto);
+
+		return await this.save(createdUser);
+	},
+
+	async updateUser(id: User['id'], updateUserDto: UpdateUserDto) {
+		return await this.update(id, updateUserDto);
+	}
+});
